--- a/C+++/Classes/Luogu/CDLuoguLoginViewController.xib
+++ b/C+++/Classes/Luogu/CDLuoguLoginViewController.xib
@@ -74,6 +74,9 @@
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <connections>
+                        <outlet property="nextKeyView" destination="E0N-wq-ZHG" id="S2R-Kp-dtN"/>
+                    </connections>
                 </textField>
                 <secureTextField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E0N-wq-ZHG">
                     <rect key="frame" x="92" y="85" width="157" height="21"/>
@@ -86,9 +89,15 @@
                             <string>NSAllRomanInputSourcesLocaleIdentifier</string>
                         </allowedInputSourceLocales>
                     </secureTextFieldCell>
+                    <connections>
+                        <outlet property="nextKeyView" destination="BI4-5N-AMU" id="fJt-Tg-eab"/>
+                    </connections>
                 </secureTextField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QL7-8u-dJ2">
-                    <rect key="frame" x="402" y="13" width="89" height="32"/>
+                    <rect key="frame" x="397" y="13" width="94" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="37g-fe-hl1"/>
+                    </constraints>
                     <buttonCell key="cell" type="push" title="Continue" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ovs-3b-uNk">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -126,12 +135,30 @@
                         <action selector="changeCaptcha:" target="-2" id="5dI-qC-OVL"/>
                     </connections>
                 </button>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gU4-Uv-GLD">
+                    <rect key="frame" x="307" y="13" width="94" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="80" id="Up4-wy-KzM"/>
+                    </constraints>
+                    <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="l5Q-9T-giR">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                        <string key="keyEquivalent" base64-UTF8="YES">
+Gw
+</string>
+                    </buttonCell>
+                    <connections>
+                        <action selector="dismissController:" target="-2" id="jLH-VL-OZb"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="SwU-lj-bU4" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="0f8-X9-php"/>
+                <constraint firstItem="QL7-8u-dJ2" firstAttribute="leading" secondItem="gU4-Uv-GLD" secondAttribute="trailing" constant="10" id="22w-uy-wAM"/>
                 <constraint firstAttribute="trailing" secondItem="QL7-8u-dJ2" secondAttribute="trailing" constant="20" id="67N-Zd-oJC"/>
                 <constraint firstItem="SwU-lj-bU4" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="Dma-qJ-rve"/>
                 <constraint firstAttribute="bottom" secondItem="QL7-8u-dJ2" secondAttribute="bottom" constant="20" id="Trg-WO-R0V"/>
+                <constraint firstAttribute="bottom" secondItem="gU4-Uv-GLD" secondAttribute="bottom" constant="20" id="ncD-QO-Coa"/>
             </constraints>
             <point key="canvasLocation" x="455" y="150"/>
         </customView>
