Fix constraint bug

--- a/C+++/Classes/Main.storyboard
+++ b/C+++/Classes/Main.storyboard
@@ -1666,9 +1666,9 @@ Gw
                                                                 </tableHeaderView>
                                                             </scrollView>
                                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VdK-iY-uTL">
-                                                                <rect key="frame" x="7" y="117" width="117" height="16"/>
+                                                                <rect key="frame" x="7" y="110" width="117" height="23"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="height" constant="16" id="xtF-LA-fGN"/>
+                                                                    <constraint firstAttribute="height" constant="23" id="xtF-LA-fGN"/>
                                                                 </constraints>
                                                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Compile Succeed" id="9GG-3v-4T5">
                                                                     <font key="font" metaFont="systemBold"/>
@@ -1932,15 +1932,19 @@ Gw
                                                                                     <autoresizingMask key="autoresizingMask"/>
                                                                                 </scroller>
                                                                             </scrollView>
-                                                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cav-z9-hhk">
+                                                                            <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cav-z9-hhk">
                                                                                 <rect key="frame" x="176" y="6" width="10" height="23"/>
-                                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="height" constant="18" id="fwI-JI-bNP"/>
+                                                                                </constraints>
                                                                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="NSTouchBarGoForwardTemplate" id="vuL-mh-TQj"/>
                                                                             </imageView>
                                                                         </subviews>
                                                                         <constraints>
                                                                             <constraint firstAttribute="trailing" secondItem="MM4-GI-nAv" secondAttribute="trailing" constant="12" id="0Gz-9G-rav"/>
+                                                                            <constraint firstItem="5fg-cQ-7aF" firstAttribute="leading" secondItem="cav-z9-hhk" secondAttribute="trailing" constant="3" id="0LR-vf-a2K"/>
                                                                             <constraint firstItem="5fg-cQ-7aF" firstAttribute="top" secondItem="MM4-GI-nAv" secondAttribute="bottom" id="0uP-rT-peJ"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="cav-z9-hhk" secondAttribute="bottom" constant="8" id="ChD-DL-EYU"/>
                                                                             <constraint firstAttribute="trailing" secondItem="5fg-cQ-7aF" secondAttribute="trailing" constant="12" id="Hz0-lg-QED"/>
                                                                             <constraint firstItem="MM4-GI-nAv" firstAttribute="leading" secondItem="nTT-Ea-SVL" secondAttribute="trailing" constant="14" id="LXX-VF-hN8"/>
                                                                             <constraint firstItem="nTT-Ea-SVL" firstAttribute="top" secondItem="sSY-4z-0yf" secondAttribute="top" id="Mm7-Vw-GKC"/>
@@ -1948,6 +1952,7 @@ Gw
                                                                             <constraint firstItem="5fg-cQ-7aF" firstAttribute="leading" secondItem="nTT-Ea-SVL" secondAttribute="trailing" constant="20" id="miD-Tz-Y3Y"/>
                                                                             <constraint firstItem="MM4-GI-nAv" firstAttribute="top" secondItem="sSY-4z-0yf" secondAttribute="top" constant="2" id="nE6-bN-Jl1"/>
                                                                             <constraint firstAttribute="bottom" secondItem="5fg-cQ-7aF" secondAttribute="bottom" constant="6" id="taB-Gk-nFy"/>
+                                                                            <constraint firstItem="cav-z9-hhk" firstAttribute="leading" secondItem="nTT-Ea-SVL" secondAttribute="trailing" constant="7" id="x5v-E0-1gz"/>
                                                                             <constraint firstAttribute="bottom" secondItem="nTT-Ea-SVL" secondAttribute="bottom" constant="5" id="yLI-ay-dGp"/>
                                                                         </constraints>
                                                                     </customView>
@@ -1973,7 +1978,7 @@ Gw
                                                             <constraint firstItem="d64-8C-Dx7" firstAttribute="top" secondItem="bvj-hX-EkB" secondAttribute="bottom" constant="6" id="DXo-CX-qxy"/>
                                                             <constraint firstItem="d64-8C-Dx7" firstAttribute="leading" secondItem="M8q-ws-1g9" secondAttribute="leading" id="Fak-VD-gfk"/>
                                                             <constraint firstItem="d64-8C-Dx7" firstAttribute="top" secondItem="8IU-nZ-4dQ" secondAttribute="bottom" constant="5" id="FoC-Ql-wxc"/>
-                                                            <constraint firstItem="d64-8C-Dx7" firstAttribute="top" secondItem="VdK-iY-uTL" secondAttribute="bottom" constant="6" id="GEM-AP-Z2b"/>
+                                                            <constraint firstItem="d64-8C-Dx7" firstAttribute="top" secondItem="VdK-iY-uTL" secondAttribute="bottom" constant="-1" id="GEM-AP-Z2b"/>
                                                             <constraint firstItem="bvj-hX-EkB" firstAttribute="top" secondItem="M8q-ws-1g9" secondAttribute="top" constant="6" id="HfW-2S-1P0"/>
                                                             <constraint firstItem="VdK-iY-uTL" firstAttribute="top" secondItem="M8q-ws-1g9" secondAttribute="top" constant="6" id="IGv-ZA-ZZu"/>
                                                             <constraint firstItem="gOT-10-Wqq" firstAttribute="leading" secondItem="Lw8-Df-9pQ" secondAttribute="trailing" constant="8" id="KVB-6h-2Bo"/>
